--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,10 +8,10 @@
     <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
     	android:gravity="center"
-        android:text="欢迎使用分享交通，请点击下面按钮进行授权登陆:" />
+        android:text="@string/loadingshow"/>
 
 
       <LinearLayout
