--- a/res/layout/activity_task_show.xml
+++ b/res/layout/activity_task_show.xml
@@ -49,7 +49,7 @@
                     android:textSize="18.0sp" /> 
                     
                <TextView
-                    android:id="@+id/contenttime"
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"   
                     android:layout_alignParentRight="true"
@@ -104,12 +104,12 @@
                     android:id="@+id/from"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"                   
-                    android:text="来自"
+                    android:text="类型"
                     android:textColor="@color/gray"
                     android:textSize="14.0sp" />  
 
              <TextView
-                 android:id="@+id/area_tv"
+                 android:id="@+id/type_tv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/from"
@@ -122,7 +122,7 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
-                   android:layout_toRightOf="@id/area_tv"
+                   android:layout_toRightOf="@id/type_tv"
                    android:text="09:35"
                    android:textColor="#7888a9"
                    android:textSize="14.0sp" />
@@ -130,124 +130,6 @@
         </RelativeLayout>
 
      </LinearLayout>
-     
-          
-          
-          
-        <FrameLayout 
-           android:layout_width="fill_parent"
-            android:layout_height="wrap_content" 
-                 android:layout_marginTop="12dip"     
-            >
-          
-            <RelativeLayout 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" 
-              
-            >  
- 
-           <RelativeLayout 
-            android:layout_width="fill_parent"
-           android:layout_height="wrap_content" 
-           android:layout_centerVertical="true"
-           android:layout_toLeftOf="@+id/comgood_iv"
-           android:layout_marginRight="10dip"
-         
-                      
-            >  
-            <TextView
-                    android:id="@+id/good_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"                   
-                    android:text="19"
-                    android:textColor="@color/gray"
-                    android:textSize="14.0sp" />  
-             <TextView
-                    android:id="@+id/good"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"                    
-                    android:layout_toRightOf="@id/good_num"  
-                    android:layout_marginLeft="2dip"                 
-                    android:text="赞"
-                    android:textColor="@color/gray"
-                    android:textSize="14.0sp" /> 
-                 
-                
-             
-             
-              <TextView
-                    android:id="@+id/comment_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" 
-                    android:layout_toRightOf="@id/good"  
-                    android:layout_marginLeft="2dip"               
-                    android:text="36"
-                    android:textColor="@color/gray"
-                    android:textSize="14.0sp" /> 
-               <TextView
-                    android:id="@+id/comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" 
-                    android:layout_toRightOf="@id/comment_num"  
-                    android:layout_marginLeft="2dip"               
-                    android:text="评论"
-                    android:textColor="@color/gray"
-                    android:textSize="14.0sp" />  
-           
-         </RelativeLayout> 
-
-             <ImageView
-                 android:id="@+id/comgood_iv"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_alignParentRight="true"
-                 android:layout_marginRight="10dip"
-                 android:background="@drawable/feed_more"
-                 android:scaleType="fitXY" />
-             
-        </RelativeLayout> 
-        
-         <RelativeLayout  
-            android:id="@+id/comgoodhandle"  
-            android:layout_width="fill_parent"  
-            android:layout_height="30dip" 
-            android:layout_marginRight="32dip"
-            android:visibility="gone"
-            >
-             
-            <RelativeLayout 
-                 android:id="@+id/cgood_rl"  
-                android:layout_width="wrap_content"  
-                android:layout_height="wrap_content"  
-               android:layout_alignParentRight="true"    
-                
-                >
-             
-             
-            <ImageView  
-                android:id="@+id/good_img"  
-                android:layout_width="wrap_content"  
-                android:layout_height="wrap_content"  
-                 android:layout_centerVertical="true"  
-                android:scaleType="fitXY"  
-                android:src="@drawable/good_seletor" 
-               
-                />  
-            <ImageView  
-                android:id="@+id/comment_img"  
-                android:layout_width="wrap_content"  
-                android:layout_height="wrap_content"              
-                android:layout_centerVertical="true" 
-                android:layout_toRightOf="@id/good_img" 
-                android:scaleType="fitXY" 
-                android:src="@drawable/comment_seletor"
-               
-          />
-            </RelativeLayout> 
-        </RelativeLayout>     
-           </FrameLayout> 
-         
-     
    </LinearLayout>
    
 
