--- a/res/layout/activity_upload_info.xml
+++ b/res/layout/activity_upload_info.xml
@@ -1,174 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dedede"
+    android:background="#f2f2f2"
     android:orientation="vertical" >
-    
 
-    <RelativeLayout 
-  			android:layout_width="fill_parent"
-  			android:layout_height="50dip" 
-  			android:id="@+id/title" 
-  			android:background="@drawable/s_search_bg"
-  			android:gravity="center_vertical" 
-  			
-  			 >  
-
-      		<TextView
-      		    android:id="@+id/mimedetail_back"
-      		    android:layout_width="wrap_content"
-      		    android:layout_height="wrap_content"
-      		    android:layout_centerVertical="true"
-      		    android:layout_marginLeft="10dip"
-      		    android:drawableLeft="@drawable/back_seletor"
-      		    android:gravity="center_vertical|center_horizontal"
-      		    android:text="返回"
-      		    android:textColor="@drawable/text_blue"
-      		    android:textSize="@dimen/sixteen" />
-				
-      		<TextView
-        		android:layout_width="wrap_content" 
-        		android:layout_height="wrap_content" 
-        		android:text="上传"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-        		android:textSize="20sp"      		     		        		
-				android:textColor="@color/black_color" /> 
-				
-          
-      	
-      		
-      	</RelativeLayout>
-      	
-                    <View 
-      		   
-                     android:layout_width="fill_parent" 
-                     android:layout_height="1dip"  
-                      android:background="@drawable/line"
-
-                    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" 
-        android:layout_marginTop="5dip"
-        android:gravity="center">
-        
-        <Button 
+        android:layout_marginTop="25dip"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <Button
             android:id="@+id/lk"
-            android:text="路况"
+            style="@style/button_tra"
             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        
-        <Button 
+            android:layout_height="@dimen/row_height"
+            android:background="@drawable/black_btn_seletor"
+            android:gravity="center_vertical|center"
+            android:text="@string/lukuang" />
+
+        <Button
             android:id="@+id/sg"
-            android:text="事故"
+            style="@style/button_tra"
             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        
-        <Button 
-            android:id="@+id/tc"
-            android:text="吐槽"
+            android:layout_height="@dimen/row_height"
+            android:background="@drawable/black_btn_seletor"
+            android:gravity="center_vertical|center"
+            android:text="@string/shigu" />
+
+        <Button
+            style="@style/button_tra"
             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        
-        <Button 
-            android:id="@+id/qz"
-            android:text="求助"
+            android:layout_height="@dimen/row_height"
+            android:background="@drawable/black_btn_seletor"
+            android:gravity="center_vertical|center"
+            android:text="@string/tucao" />
+
+        <Button
+            style="@style/button_tra"
             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-        
+            android:layout_height="@dimen/row_height"
+            android:background="@drawable/black_btn_seletor"
+            android:gravity="center_vertical|center"
+            android:text="@string/qiuzhu" />
     </LinearLayout>
 
-    
-    	<View 
-      		   
-                     android:layout_width="fill_parent" 
-                     android:layout_height="1dip"  
-                      android:background="@drawable/line"
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/row_height"
+        android:background="@drawable/line" />
 
-                    />
-    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dip"   
-        android:orientation="horizontal">
-        
+        android:layout_margin="@dimen/row_padding"
+        android:orientation="horizontal" >
+
         <RelativeLayout
             android:id="@+id/lukuang"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:visibility="visible" >
-        
-        <RadioGroup
-            android:id="@+id/lk_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal" >
 
-        	<RadioButton 
-        	    android:id="@+id/bicycle"
-        	       	style="@style/rg_btn_style"
-        			android:drawableTop="@drawable/rb_bicycle_selector"
-        			android:text="拥堵"/>
+            <RadioGroup
+                android:id="@+id/lk_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal" >
 
-        	<RadioButton
-        	    android:id="@+id/car"
-        	    style="@style/rg_btn_style"
-        	    android:drawableTop="@drawable/rb_car_select"
-        	    android:text="缓慢" />
+                <RadioButton
+                    android:id="@+id/bicycle"
+                    style="@style/rg_btn_style"
+                    android:drawableTop="@drawable/rb_bicycle_selector"
+                    android:text="@string/yongdu" />
 
-        	<RadioButton
-        	    android:id="@+id/plane"
-        	    style="@style/rg_btn_style"
-        	    android:drawableTop="@drawable/rb_plane_selector"
-        	    android:text="畅通" />
+                <RadioButton
+                    android:id="@+id/car"
+                    style="@style/rg_btn_style"
+                    android:drawableTop="@drawable/rb_car_select"
+                    android:text="@string/huanman" />
 
-        </RadioGroup>
-        
+                <RadioButton
+                    android:id="@+id/plane"
+                    style="@style/rg_btn_style"
+                    android:drawableTop="@drawable/rb_plane_selector"
+                    android:text="@string/changtong" />
+            </RadioGroup>
         </RelativeLayout>
-        
-       <RelativeLayout
-           android:id="@+id/shigu"
-           android:layout_width="fill_parent"
-           android:layout_height="100dip"
-           android:layout_marginLeft="10dip"
-           android:layout_marginRight="10dip"
-           android:layout_marginTop="10dip"
-           android:background="@drawable/edit_bg"
-           android:visibility="gone" >
 
-        <EditText
-            android:id="@+id/info_et"
+        <RelativeLayout
+            android:id="@+id/shigu"
             android:layout_width="fill_parent"
             android:layout_height="100dip"
-            android:background="#00ffffff"
-            android:gravity="left"
-            android:paddingLeft="12.0dip"
-            android:textColor="#808080"
-            android:textColorHint="#ff666666"
-            android:textSize="16.0sp" />
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="10dip"
+            android:background="@drawable/edit_bg"
+            android:visibility="gone" >
 
+            <EditText
+                android:id="@+id/info_et"
+                android:layout_width="fill_parent"
+                android:layout_height="100dip"
+                android:background="#00ffffff"
+                android:gravity="left"
+                android:paddingLeft="12.0dip"
+                android:textColor="#808080"
+                android:textColorHint="#ff666666"
+                android:textSize="16.0sp" />
         </RelativeLayout>
-        
-        
     </LinearLayout>
-    
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/line" />
+
     <RelativeLayout
-            			android:layout_width="fill_parent"
-            			android:layout_height="fill_parent"
-            			android:layout_marginTop="15dip"
-            			android:layout_marginBottom="30dip">
-        
-        <Button android:id="@+id/send"
-            android:layout_width="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="60dip"
+        android:layout_marginTop="15dip" >
+
+        <TextView
+            android:id="@+id/place"
+            style="@style/text_black_18"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="发送"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/row_padding"
+            android:gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/send"
+            style="@style/text_black_18"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/row_height"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/row_padding"
+            android:background="@drawable/row_selector"
+            android:gravity="center_vertical|center"
+            android:text="@string/button_submit" />
     </RelativeLayout>
+
 </LinearLayout>
