--- a/res/layout/activity_user_friends.xml
+++ b/res/layout/activity_user_friends.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/activity_bg"
-    android:orientation="vertical" >
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#dedede"
+    android:orientation="vertical"
+    android:padding="@dimen/content_padding" >
+    
     <TextView
         android:id="@+id/hint"
         style="@style/text_black_18"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/row_padding"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/listfriend" />
 
@@ -23,7 +23,7 @@
 
             <com.handmark.pulltorefresh.library.PullToRefreshListView
                 xmlns:ptr="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/msgList"
+                android:id="@+id/friendList"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:divider="@drawable/divider"
@@ -36,5 +36,4 @@
                 ptr:ptrAnimationStyle="flip" >
             </com.handmark.pulltorefresh.library.PullToRefreshListView>
         </LinearLayout>
-
 </LinearLayout>
