--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="footer_height">60dp</dimen>
     
     <dimen name="table_margin">5dp</dimen>
+    <dimen name="comment_margin">2dp</dimen>
     
     <dimen name="content_padding">10dp</dimen>
     
