--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_weight">1.0</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:drawablePadding">4dip</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -42,6 +42,13 @@
     
     <style name="text_18">
         <item name="android:textSize">18dp</item>
+    </style>
+    
+    <style name="button_tra">
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">@dimen/row_padding</item>
     </style>
 
 </resources>
