--- a/res/layout/fragment_map.xml
+++ b/res/layout/fragment_map.xml
@@ -20,6 +20,7 @@
 	    android:padding="35dip">    
 	        <ImageView
 	            android:id="@+id/edit_info"
+	      		    android:onClick="upload"
 	      		    android:layout_width="wrap_content"
 	      		    android:layout_height="wrap_content"
 	            android:layout_centerVertical="true"
